# Intern-work

./: __init__.py  app.py  cls.py  fs.py  pyproject.toml  server.py  sl.py
static/: styles.css
static/stylesheets/: style.css
templates/: 404.html  base.html  data.html  feature.html  index.html
