[tool.poetry]
name = "repl_python3_Intern-work"
version = "0.1.0"
description = ""
authors = ["kuroryuu <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.3"
skfeature-chappers = "^1.1.0"
sklearn = "^0.0"
Flask = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
